fixing font sizes and spacing

--- a/cigionline/static/themes/data_series/css/_article_page.scss
+++ b/cigionline/static/themes/data_series/css/_article_page.scss
@@ -238,13 +238,15 @@
     opacity: 0;
     transition: height 0.5s ease, opacity 0.5s ease;
 
-    &.scrolled {
-      height: auto;
-      opacity: 1;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 100;
+    @include media-breakpoint-up(lg) {
+      &.scrolled {
+        height: auto;
+        opacity: 1;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 100;
+      }
     }
 
     .progress-bar {
